# server/models/user.model.mjs
@@ -1,52 +1,75 @@
 import connectionPool from "../configs/db.mjs";
-import bcrypt from "bcrypt";
 
-const saltRounds = 10;
-
-export const createUser = async (username, password, email) => {
-  const roleUser = 2;
+/**
+ * Check if user exist in the registry of Merry Match application.
+ *
+ * @param {string} email
+ * @returns
+ */
+export const doesUserExist = async (email) => {
   try {
-    const hashPassword = await bcrypt.hash(password, saltRounds);
     const result = await connectionPool.query(
       `
-      INSERT INTO users (username, password, email, role_id)
-      VALUES ($1, $2, $3, $4)
-      RETURNING id
-      `,
-      [username, hashPassword, email, roleUser]
+        SELECT *
+        FROM auth.users
+        WHERE email = $1
+        `,
+      [email]
     );
-    const userId = result.rows[0].id;
-    console.log(`User created successfully: ${username} (ID: ${userId})`);
-    return userId;
+
+    return result;
   } catch (error) {
-    console.error(`Error creating user: ${error.message}`);
+    console.error("Error occurred during signUp:", error);
     throw error;
   }
 };
 
-export const findUserByUsername = async (username) => {
+/**
+ * Get user data (from table: users, user_profiles, hobbies, profile_picture) from email from the Merry Match application.
+ *
+ * @param {string} email
+ * @returns {object} - The data object, containing the user, profile, hobbies, avatar key:value pairs.
+ */
+export const getUser = async (email) => {
   try {
-    const result = await connectionPool.query(
-      `
-      SELECT *
-      FROM users
-      WHERE username=$1
-      `,
-      [username]
+    // get data from users table
+    const userResult = await connectionPool.query(
+      `SELECT * FROM users WHERE email = $1`,
+      [email]
     );
-    const user = result.rows[0];
+    const userId = userResult.rows[0].user_id;
+    // console.log(userId);
 
-    if (user) {
-      console.log(`User found by username: ${username}`);
-    } else {
-      console.log(`User not found with username: ${username}`);
-    }
+    // get data from user_profiles table
+    const profileResult = await connectionPool.query(
+      `SELECT * FROM user_profiles WHERE user_id = $1`,
+      [userId]
+    );
 
-    return user || null;
+    const profileId = profileResult.rows[0].profile_id;
+
+    // get data from hobbies table
+    const hobbiesResult = await connectionPool.query(
+      `SELECT * FROM hobbies WHERE profile_id = $1`,
+      [profileId]
+    );
+
+    // get data from profile_pictures table
+    const avatarsResult = await connectionPool.query(
+      `SELECT * FROM profile_pictures WHERE profile_id = $1`,
+      [profileId]
+    );
+
+    const data = {
+      user: userResult.rows[0],
+      profile: profileResult.rows[0],
+      hobbies: hobbiesResult.rows,
+      avatars: avatarsResult.rows,
+    };
+
+    // console.log(data);
+    return data;
   } catch (error) {
-    console.error(
-      `Error finding user by username=${username}: ${error.message}`
-    );
-    throw error;
+    console.error("Error occurred during signIn:", error);
   }
 };
