# server/routes/api/v1/package.route.mjs
@@ -1,22 +1,27 @@
-// import express from "express";
-// import {
-//   getAllPackages,
-//   getPackageById,
-//   createPackage,
-//   updatePackageById,
-//   deletePackageById,
-// } from "../../../controllers/package.controller.mjs";
+import express from "express";
+import {
+  getAllPackages,
+  getPackageById,
+  createPackage,
+  updatePackageById,
+  deletePackageById,
+} from "../../../controllers/package.controller.mjs";
+import supabaseAuthIsAdminMiddleware from "../../../middlewares/supabaseAuthIsAdminMiddleware.mjs";
+import { validatePackageData } from "../../../middlewares/validatePackageData.validation.mjs";
 
-// const router = express.Router();
+const router = express.Router();
 
-// router.get("/", getAllPackages);
+router.get("/", getAllPackages);
 
-// router.get("/:packageId", getPackageById);
+router.get("/:packageId", getPackageById);
 
-// router.post("/", createPackage);
+// TODO: add IsAdmin Middleware
+router.post("/", [validatePackageData], createPackage);
 
-// router.put("/:packageId", updatePackageById);
+// TODO: add IsAdmin Middleware
+router.put("/:packageId", [validatePackageData], updatePackageById);
 
-// router.delete("/:packageId", deletePackageById);
+// TODO: add IsAdmin Middleware
+router.delete("/:packageId", [], deletePackageById);
 
-// export default router;
+export default router;
